--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -48,6 +48,7 @@
         "position": "Position",
         "role": "Role",
         "img": "Avatar",
-        "save": "Save"
+        "save": "Save",
+        "edit": "Update"
     }
 }
