--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -48,6 +48,7 @@
         "position": "Chức danh",
         "role": "Vai trò",
         "img": "Ảnh đại diện",
-        "save": "Lưu"
+        "save": "Lưu",
+        "edit": "Cập nhật"
     }
 }
