update react-slick and doctor's data

--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -50,5 +50,9 @@
         "img": "Ảnh đại diện",
         "save": "Lưu",
         "edit": "Cập nhật"
+    },
+    "homepage": {
+        "see-more": "Xem Thêm",
+        "outstanding-doctor": "Bác sĩ nổi bật"
     }
 }
