--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -71,5 +71,15 @@
             "choose": "Chọn ",
             "book-free": " và đặt (miễn phí)"
         }
+    },
+    "admin": {
+        "manage-doctor": {
+            "title-section": "Thêm thông tin bác sĩ",
+            "select-doctor": "Chọn bác sĩ",
+            "description": "Thông tin giới thiệu",
+            "add": "Tạo thông tin",
+            "save": "Lưu thông tin",
+            "select-dropdown": "Chọn bác sĩ"
+        }
     }
 }
