--- a/src/translations/vi.json
+++ b/src/translations/vi.json
@@ -56,7 +56,8 @@
     },
     "homepage": {
         "see-more": "Xem Thêm",
-        "outstanding-doctor": "Bác sĩ nổi bật"
+        "outstanding-doctor": "Bác sĩ nổi bật",
+        "popular-specialty": "Chuyên khoa phổ biến"
     },
     "manage-schedule": {
         "title": "Quản lý kế hoạch khám bệnh",
